--- a/blog_livros/static/css/header.css
+++ b/blog_livros/static/css/header.css
@@ -2,17 +2,18 @@
 header {
   height: 200px;
   background-color: #a19090;
-  
-    
   padding: 30px 20px;
-  }
-   
-header h1 {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 15px;
-  display: flex;
+  display:flex;
+  justify-content: center;
   text-align: center;
   }
+   
+  .titulo_centro{
+  font-size: 24px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+ }
    
   
