--- a/blog_livros/static/css/home.css
+++ b/blog_livros/static/css/home.css
@@ -4,17 +4,13 @@
     
 }
 
-main{
+  main{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100vw;
     height: 100vh;
-}
-/* 
-
-
-
+} 
 
 .card h3 {
     margin: 5px 0;
@@ -23,7 +19,7 @@ main{
 .card p {
     font-size: 0.9rem;
     color: #666;
-} */
+}
 
 .cards_centro{
     display: flex !important;
@@ -34,13 +30,25 @@ main{
     gap: 230px; */
 }
 
-.linha-um{
+/* .linha-um{
     display: flex;
     justify-content: center;
     align-items: center;
     width: auto;
     height: auto;    
 }
+ */
+
+ .linha_um{
+    display: flex;    
+    justify-content: space-between;
+    margin-top: 2rem;
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
+    height: auto;
+}
+
 
 .linha_dois{
     display: flex;    
@@ -59,11 +67,13 @@ main{
     background-color: rgb(192, 87, 87);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; */
     text-align: center;
     padding: 4rem;
-    
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+
+.card:hover {
+    transform: translateY(-8px); 
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2); 
+  }
+  
