--- a/blog_livros/templates/base.html
+++ b/blog_livros/templates/base.html
@@ -10,18 +10,21 @@
     <link rel="stylesheet" href="{% static 'css/header.css' %}">
     <link rel="stylesheet" href="{% static 'css/footer.css' %}">
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=home"/>
     <title>Document</title>
 </head>
 <body>
-    <header>
-        {% include 'componentes/header.html' %}
-    </header>
-    <main>
-        {% block content %} {% endblock %}
-    </main>
-    <footer>
-        {% include 'componentes/footer.html' %}
-    </footer>
+        <header>
+            {% include 'componentes/header.html' %}
+        </header>
+        
+        <main>
+            {% block content %} {% endblock %}
+        </main>
+        
+        <footer>
+            {% include 'componentes/footer.html' %}
+        </footer>
 </body>
 </html>
