--- a/blog_livros/templates/componentes/header.html
+++ b/blog_livros/templates/componentes/header.html
@@ -2,6 +2,7 @@
 
 
 <div class="titulo_centro">
-   <h1>Blog de Livros</h1> 
+   <h1>Resenhando</h1>
+   <h2> Sua comunidade literária</h2>
 </div>
 
