--- a/blog_livros/static/css/header.css
+++ b/blog_livros/static/css/header.css
@@ -1,7 +1,7 @@
 
 header {
   height: 200px;
-  background-color: #a19090;
+  background-color: #232323 !important;
   padding: 30px 20px;
   display:flex;
   justify-content: center;
@@ -14,6 +14,11 @@ header {
   display: flex;
   justify-content: center;
   text-align: center;
+  flex-direction: column;
  }
-   
+  
+.titulo_centro h1 , h2{
+  color: aliceblue !important;
+
+}
   
