Co-authored-by: GUILHERME FERREIRA DAMASCENO <damasceno.guilherme@aluno.senac.rio> Co-authored-by: AMANDA FERREIRA DAMASCENO <amanda.damasceno@aluno.senac.rio>

--- a/blog_livros/static/css/base.css
+++ b/blog_livros/static/css/base.css
@@ -6,17 +6,15 @@
 
 
 main{
-    /* flex: 1; */
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 99vw;
+    width: 97vw !important;
     height: 100vh;
 }
 
 footer{
     bottom: 0 !important;
     width: auto;
-    /* height: 220px; */
     background-color: 929292;
   }
