--- a/blog_livros/templates/componentes/header.html
+++ b/blog_livros/templates/componentes/header.html
@@ -1,8 +1,17 @@
 {% load static %}
 
+<section >
+      <div class="titulo_centro">
+      <h1>Resenhando</h1>
+      <h2>Sua comunidade literária</h2>
+      </div>
 
-<div class="titulo_centro">
-   <h1>Resenhando</h1>
-   <h2> Sua comunidade literária</h2>
-</div>
+      <div class="logo">
+      
+            <img src="{% static 'img/Logo_branco.png' %}" alt="imagem">
+
+      </div>
+
+</section>
+
 
