--- a/blog_livros/static/css/home.css
+++ b/blog_livros/static/css/home.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 98vw !important;
     height: 100vh;
 } 
 
@@ -18,7 +18,12 @@
 
 .card p {
     font-size: 0.9rem;
-    color: #666;
+    color: #2f2a2a;
+}
+
+.card, h3, a{
+  text-decoration: none;
+  color: inherit !important;
 }
 
 .cards_centro{
