--- a/blog_livros/templates/paginas/criar_conta.html
+++ b/blog_livros/templates/paginas/criar_conta.html
@@ -20,40 +20,33 @@
                 {{ form.sobrenome  }}
 
             </div>
-            <div class='col'>
-                <label for="id_nome"><strong>CPF:</strong></label>
-                {{ form.cpf }}
-            </div>         
         </div>
 
         <!-- Segunda Linha -->
          <div class="row">
-            <div class='col-3'>
-                <label for="id_nome"><strong>Data de Nascimento:</strong>  </label>
-                 {{ form.data_nascimento }}
-            </div>
-            <div class='col'>
-                <label for="id_nome"><strong>Endereço:</strong></label>
-                {{ form.endereco  }}
-            </div>          
+            <label for="id_nome"><strong>Apelido:</strong></label>
+                {{ form.apelido  }}
         </div>
 
         <!-- Terceira Linha -->
          <div class="row">
-            <div class='col-3'>
-                <label for="id_nome"><strong>Telefone:</strong>  </label>
-                 {{ form.telefone }}
-            </div>
             <div class='col'>
                 <label for="id_nome"><strong>Email:</strong></label>
                 {{ form.email  }}
             </div>          
         </div>
-
-       <div class='row mt-3 mb-3 '>
-        <div class="btn-block"> 
-            <button class="btn btn-secondary " type="submit">{{ botao }}</button>
+        
+        <div class="row">
+            <div class='col'>
+                <label for="id_nome"><strong>Senha:</strong></label>
+                {{ form.senha  }}
+            </div>          
         </div>
+
+        <div class='row mt-3 mb-3 '>
+            <div class="btn-block"> 
+                <button class="btn btn-secondary " type="submit">{{ botao }}</button>
+            </div>
        </div>
         
     </form>
