--- a/blog_livros/templates/paginas/home.html
+++ b/blog_livros/templates/paginas/home.html
@@ -3,23 +3,24 @@
 
 {% block content %}
 
+ 
 <section class="justify-content-center mt-5">
     <div class="row linha_um">
         <div class="col-4 ">
             <div class="card">
-                <h3>Biblioteca</h3>
+                <h3> <a href="{% url 'home' %}">Biblioteca</a></h3>
                 <p>posts existentes</p>
             </div>
         </div>
         <div class="col-4">
             <div class="card">
-                <h3>Faça login</h3>
+                <h3> <a href="">Faça login</a></h3>
                 <p>Entre na sua conta</p>
             </div>
         </div>
         <div class="col-4 ">
             <div class="card">
-                <h3>Cadastre-se</h3>
+                <h3> <a href="{% url 'criar_conta' %}">Cadastre-se</a></h3>
                 <p>Faça a sua conta</p>
             </div>
         </div>
@@ -29,28 +30,6 @@
         <h2> Livros do momento</h2>
     </div>
 
-    <!-- <div class="row linha_dois">
-        <div class="col-4">
-            <div class="card">
-                <h3>Livro 1</h3>
-                <p></p>
-            </div>
-        </div>
-
-        <div class="col-4">
-            <div class="card">
-                <h3>Livro 1</h3>
-                <p></p>
-            </div>
-        </div>
-
-        <div class="col-4">
-            <div class="card">
-                <h3>Livro 1</h3>
-                <p></p>
-            </div>
-        </div>
-    </div> -->
 
     <section class=" row linha_tres container-wrapper mt-4">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -63,7 +42,7 @@
                     aria-label="Slide 3"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
                     aria-label="Slide 4"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
                     aria-label="Slide 5"></button>
             </div>
             <div class="carousel-inner">
@@ -99,7 +78,14 @@
                         <p></p>
                     </div>
                 </div>
-        
+                <div class="carousel-item">
+                    <img src="{% static 'img/livro_lotr.png' %}" class="d-block mx-auto"
+                        style="max-height: 400px; object-fit: cover;" alt="livro 5">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3></h3>
+                        <p></p>
+                    </div>
+                </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                 data-bs-slide="prev">
