Co-authored-by: AMANDA FERREIRA DAMASCENO <amanda.damasceno@aluno.senac.rio> Co-authored-by: GUILHERME FERREIRA DAMASCENO <damasceno.guilherme@aluno.senac.rio>

--- a/blog_livros/templates/componentes/header.html
+++ b/blog_livros/templates/componentes/header.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<section >
+<section class="kkk">
       <div class="titulo_centro">
       <h1>Resenhando</h1>
       <h2>Sua comunidade literária</h2>
