--- a/blog_livros/templates/componentes/header.html
+++ b/blog_livros/templates/componentes/header.html
@@ -1,17 +1,17 @@
 {% load static %}
 
-<section class="kkk">
-      <div class="titulo_centro">
-      <h1>Resenhando</h1>
-      <h2>Sua comunidade literária</h2>
-      </div>
-
-      <div class="logo">
+<section class="teste">
       
-            <img src="{% static 'img/Logo_branco.png' %}" alt="imagem">
-
+      <div class="logo">
+            
+            <a href="{% url 'home' %}"> <img src="{% static 'img/Logo_branco.png' %}" alt="imagem" width="148" height="150"></a>
+            
       </div>
-
+      <div class="titulo_centro">
+       <h1> Resenhando</h1>
+       <h2>Sua comunidade literária</h2>
+      </div>
+      
 </section>
 
 
