--- a/blog_livros/templates/paginas/home.html
+++ b/blog_livros/templates/paginas/home.html
@@ -14,14 +14,14 @@
         </div>
         <div class="col-4">
             <div class="card">
-                <h3> <a href="">Faça login</a></h3>
+                <h3> <a href="{% url 'login' %}">Faça login</a></h3>
                 <p>Entre na sua conta</p>
             </div>
         </div>
         <div class="col-4 ">
             <div class="card">
-                <h3> <a href="{% url 'criar_conta' %}">Cadastre-se</a></h3>
-                <p>Faça a sua conta</p>
+                <h3> <a href="{% url 'criar_post' %}">Resenha</a></h3>
+                <p>Faça a sua resenha</p>
             </div>
         </div>
     </div>
