--- a/blog_livros/templates/componentes/header.html
+++ b/blog_livros/templates/componentes/header.html
@@ -12,6 +12,11 @@
        <h2>Sua comunidade literária</h2>
       </div>
       
+      
+</section>
+
+<section>
+<h3 class="color_cadastro"><a href="{% url 'criar_conta' %}">Cadastrar</a></h3>
 </section>
 
 
