--- a/blog_livros/static/css/login.css
+++ b/blog_livros/static/css/login.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     height: max-content;
     max-height: 10%;
+    display: flex;
 }
 
 .row{
@@ -12,5 +13,23 @@
 
 
 #botao_login{
-    margin-top: 5px !important;
+    width: 55px !important;
+    border-radius: 25;
 }
+
+.sec{
+    border: 1px solid #4158d0; /* Testes */
+    border-radius: 15px; /* Testes */
+    width: 500px; /* Testes */
+    height: auto; /* Testes */
+    padding: 32px; /* Testes */
+    display: flex; /* Testes */
+    flex-direction: column; /* Testes */
+    background-color: #fdfdfd ;
+    border:1px solid;
+    border-radius:10px;
+    text-align: center;
+
+}
+
+
