--- a/blog_livros/templates/paginas/login.html
+++ b/blog_livros/templates/paginas/login.html
@@ -12,7 +12,7 @@
     <div class="titulo"><h2>{{ titulo }}</h2></div>   
 </section>
 <section>
-    <h1 id="login_text">Login:</h1>
+    <h1 class="mb-4">Login:</h1>
      <form action="" method="post">
             {% csrf_token %}
             <!-- Primeira Linha -->
@@ -25,9 +25,14 @@
                     <label for="id_nome"><strong>Senha:</strong></label>
                     <input type="password" name="senha">
                 </div>
-                <button id="botao_login" class="btn-secondary " type="submit">Entrar</button>                 
+                                
+                <div class='row mt-3 mb-3 '>
+                    <div class="btn-block">
+                        <button class="btn btn-secondary " type="submit">Entrar</button>
+                    </div>
+                </div>
+         
             </div>
-     </form>
 
         {% if mensagem  %}
         <div class="alert alert-danger" role="alert">
@@ -37,6 +42,7 @@
         
 
         {{usuario}}
+    <form>
 </section>
 
 
