--- a/blog_livros/templates/componentes/footer.html
+++ b/blog_livros/templates/componentes/footer.html
@@ -2,12 +2,9 @@
 
 
 <div class="coluna_left">
-    <h2>Fale conosco</h2>
-    <button class="botao_contato"> Contato </button>
-    <h4>Este é o final da página</h4>
+    
+    <h4>Fale conosco:</h4>
+    <h4>resenhando@gmail.com</h4>
     <h5>"Nem todos que vagueiam estão perdidos" ~ J.R.R.Tolkien</h5>
 </div>
-
-
-   
 
