--- a/blog_livros/templates/paginas/home.html
+++ b/blog_livros/templates/paginas/home.html
@@ -8,8 +8,8 @@
     <div class="row linha_um">
         <div class="col-4 ">
             <div class="card">
-                <h3> <a href="{% url 'home' %}">Biblioteca</a></h3>
-                <p>posts existentes</p>
+                <h3> <a href="{% url 'biblioteca' %}">Biblioteca</a></h3>
+                <p>Veja os posts da comunidade</p>
             </div>
         </div>
         <div class="col-4">
