--- a/blog_livros/static/css/header.css
+++ b/blog_livros/static/css/header.css
@@ -27,6 +27,7 @@ header {
   margin: 10;
   width: 17vh;
   height: 15vh;
+  justify-content: center;
   
 }
 
@@ -37,7 +38,3 @@ align-items: center
 
 }
 
-.color_cadastro{
-  color:white !important;
-  
-}
