--- a/blog_livros/templates/paginas/criar_postagem.html
+++ b/blog_livros/templates/paginas/criar_postagem.html
@@ -3,46 +3,81 @@
 
 {% block content %}
 
+<style>
+    /* Seleciona textarea pelo nome do campo */
+    textarea[name="descricao"],
+    textarea[name="resenha"] {
+        width: 100%;
+        min-height: 100px !important;
+        max-height: 150px !important;
+        padding: 8px;
+        font-size: 1rem;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        resize: vertical;
+    }
+</style>
+    
+    
+    <section>
+        <form action="{% url 'criar_post' %}" method="post">
+            {% csrf_token %}
+            <!-- Primeira Linha -->
+            <div class="row">
+                <div class='col'>
+                    <label for="id_nome"><strong>Autor Postagem:</strong></label>
+                    {{ form.autor_postagem }}
+                </div>
+                <div class='col'>
+                    <label for="id_nome"><strong>Titulo:</strong> </label>
+                    {{ form.titulo }}
+                </div>               
 
-<section>
-    <form action="" method="post">
-        {% csrf_token %}
-        <!-- Primeira Linha -->
-        <div class="row">
-            <div class='col'>
-                <label for="id_nome"><strong>Titulo:</strong> </label>
-                {{ form.titulo }}
+                <div class='col'>
+                    <label for="id_nome"><strong>Autor:</strong></label>
+                    {{ form.autor }}
+                </div>
             </div>
-            <div class='col'>
-                <label for="id_nome"><strong>Autor:</strong></label>
-                {{ form.autor }}
+    
+            <!-- Segunda Linha -->
+            <div class="row">
+                <div class="col">
+                    <label for="id_nome"><strong>Gênero:</strong></label>
+                    {{ form.genero }}
+                </div>
             </div>
-        </div>
+    
+            <div class="row">
+                <div class="col">
+                    <label for="id_nome"><strong>Descrição:</strong></label>     
+                        {{ form.descricao }}       
+                </div>
+            </div>
+    
+            <!-- Terceira Linha -->
+            <div class="row">
+                <div class='col'>
+                    <label for="id_nome"><strong>Resenha:</strong></label>
+                    {{ form.resenha }}
+                </div>             
+            </div>
+            <div class="row">
+                <div class='col'>
+                    <label for="id_nome"><strong>Data Postagem:</strong></label>
+                    {{ form.data_postagem }}
+                </div>
+            </div>
+           
+           
+            <div class='row mt-3 mb-3 '>
+                <div class="btn-block">
+                    <button class="btn btn-secondary " type="submit">Postar</button>
+                </div>
+            </div> 
 
-        <!-- Segunda Linha -->
-        <div class="row">
-            <div class="col">
-                <label for="id_nome"><strong>Gênero:</strong></label>
-                {{ form.genero }}
-            </div>
-        </div>
-
-        <!-- Terceira Linha -->
-        <div class="row">
-            <div class='col'>
-                <label for="id_nome"><strong>Resenha:</strong></label>
-                {{ form.resenha }}
-            </div>
-        </div>
-
-
-        <div class='row mt-3 mb-3 '>
-            <div class="btn-block">
-                <button class="btn btn-secondary " type="submit"> Postar</button>
-            </div>
-        </div>
-        
-    </form>
-</section>
+           
+            
+        </form>
+    </section>
 
 {% endblock %}
