--- a/blog_livros/templates/paginas/login.html
+++ b/blog_livros/templates/paginas/login.html
@@ -33,7 +33,7 @@
                 </div>
          
             </div>
-
+        </form>
         {% if mensagem  %}
         <div class="alert alert-danger" role="alert">
             <p> {{ mensagem }}</p> <!-- Uso do conceito context -->
@@ -42,7 +42,7 @@
         
 
         {{usuario}}
-    <form>
+    
 </section>
 
 
