--- a/blog_livros/templates/paginas/home.html
+++ b/blog_livros/templates/paginas/home.html
@@ -4,100 +4,121 @@
 {% block content %}
 
  
-<section class="justify-content-center mt-5">
-    <div class="row linha_um">
-        <div class="col-4 ">
-            <div class="card">
-                <h3> <a href="{% url 'biblioteca' %}">Biblioteca</a></h3>
-                <p>Veja os posts da comunidade</p>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card">
-                <h3> <a href="{% url 'login' %}">Faça login</a></h3>
-                <p>Entre na sua conta</p>
-            </div>
-        </div>
-        <div class="col-4 ">
-            <div class="card">
-                <h3> <a href="{% url 'criar_post' %}">Resenha</a></h3>
-                <p>Faça a sua resenha</p>
-            </div>
-        </div>
+<style>
+    .em_coluna{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #titulo_post{
+        color: black !important;
+        margin-bottom: 50px;
+        font-family: garamond; 
+    }
+</style>
+
+
+
+<section class="em_coluna">
+    <div>
+        <h2 id="titulo_post"> "Para quem não sabe para onde vai, qualquer caminho serve!" ~ Gato de Cheshire</h2>
     </div>
-
-    <div class="centro">
-        <h2> Livros do momento</h2>
-    </div>
-
-
-    <section class=" row linha_tres container-wrapper mt-4">
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
-                    aria-label="Slide 4"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
-                    aria-label="Slide 5"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="{% static 'img/livro_dost.png' %}" class="d-block mx-auto"
-                        style="max-height: 400px; object-fit: cover;" alt="livro 1">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3></h3>
-                        <p></p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="{% static 'img/livro_rev.png' %}" class="d-block mx-auto"
-                        style="max-height: 400px; object-fit: cover;" alt="livro 2">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3></h3>
-                        <p></p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="{% static 'img/livro_narnia.png' %}" class="d-block mx-auto"
-                        style="max-height: 400px; object-fit: cover;" alt="livro 3">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3></h3>
-                        <p></p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="{% static 'img/livro2.png' %}" class="d-block mx-auto"
-                        style="max-height: 400px; object-fit: cover;" alt="livro 4">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3></h3>
-                        <p></p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="{% static 'img/livro_lotr.png' %}" class="d-block mx-auto"
-                        style="max-height: 400px; object-fit: cover;" alt="livro 5">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h3></h3>
-                        <p></p>
-                    </div>
+    <section class="justify-content-center mt-5">
+        <div class="row linha_um">
+            <div class="col-4 ">
+                <div class="card">
+                    <h3> <a href="{% url 'biblioteca' %}">Biblioteca</a></h3>
+                    <p>Veja os posts da comunidade</p>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+            <div class="col-4">
+                <div class="card">
+                    <h3> <a href="{% url 'login' %}">Faça login</a></h3>
+                    <p>Entre na sua conta</p>
+                </div>
+            </div>
+            <div class="col-4 ">
+                <div class="card">
+                    <h3> <a href="{% url 'criar_post' %}">Resenha</a></h3>
+                    <p>Faça a sua resenha</p>
+                </div>
+            </div>
         </div>
+
+        <div class="centro">
+            <h2> Livros do momento</h2>
+        </div>
+
+
+        <section class=" row linha_tres container-wrapper mt-4">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+                        aria-label="Slide 5"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="{% static 'img/livro_dost.png' %}" class="d-block mx-auto"
+                            style="max-height: 400px; object-fit: cover;" alt="livro 1">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{% static 'img/livro_rev.png' %}" class="d-block mx-auto"
+                            style="max-height: 400px; object-fit: cover;" alt="livro 2">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{% static 'img/livro_narnia.png' %}" class="d-block mx-auto"
+                            style="max-height: 400px; object-fit: cover;" alt="livro 3">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{% static 'img/livro2.png' %}" class="d-block mx-auto"
+                            style="max-height: 400px; object-fit: cover;" alt="livro 4">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{% static 'img/livro_lotr.png' %}" class="d-block mx-auto"
+                            style="max-height: 400px; object-fit: cover;" alt="livro 5">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h3></h3>
+                            <p></p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
     </section>
 </section>
 
